--- a/app/templates/committee/dashboard.html
+++ b/app/templates/committee/dashboard.html
@@ -23,7 +23,7 @@
       <div class="card text-dark bg-warning mb-3">
         <div class="card-body d-flex justify-content-between align-items-center">
           <h5 class="card-title mb-0">Pending</h5>
-          <span class="fs-2">{{ submitted }}</span>
+          <span class="fs-2">{{ pending }}</span>
         </div>
       </div>
     </div>
